--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "chart.js": "^2.9.4",
+    "date-fns": "^2.30.0",
     "react": "^17.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
