--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "chart.js": "^2.9.4",
-    "date-fns": "^2.30.0",
-    "react": "^17.0.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^17.0.0"
+    "@material-ui/core": "^4.11.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "chart.js": "^2.9.3",
+    "css": "^3.0.0",
+    "leaflet": "^1.6.0",
+    "numeral": "^2.0.6",
+    "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
