--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1"
   },
+  "homepage": "/myapp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": "react-app"
   },
